	 - desc: string, description of the operation error
	 - jex: Java object, reference to the Java exception object
	 - statement: string (or NULL), executed statement
	This allows the programmatic use of tryCatch() to selectively
	catch exceptions and/or to use further Java utilities, such as
	e$jex$printStackTrace()

    *	add `schema=` to `dbExistsTable()` (#84)

    *	add `findDrivers()` function which uses Java Service Provider
	mechanism (in Java 1.6 and higher) to find all JDBC driver
	classes on the class path.


0.2-8	2020-03-06
    *	re-use Java helper for subsequent fetch() calls on the same
	result set which should make them more efficient.

    *	set `has.completed` only if the fetch() has encountered
	end of the result set (#73)

    *	add `use.label` argument to fetch() - if set to `FALSE`
	then column names are used instead of labels (#74)

    *	change both semantics and defaults for `append=FALSE` and
	`overwrite=FALSE` in dbWriteTable() to match what is
	documented in `DBI`: append=TRUE no longer requires the
	existence of the target table and the options are mutally
	exclusive (i.e. append=TRUE, overwrite=TRUE is illegal).

    *	dbWriteTable() also gains `force=TRUE` option (disabled by
	default) which skips the existence check for the target and
	proceeds with removal and/or insertion regardless. This can be
	useful with append=TRUE where the target is not a table and
	thus would not pass the dbExistsTable() check (see #27).

    *	dbRemoveTable() returns TRUE on success (#20). On failure it
	will fail with an error if silent=FALSE (as it always did so
	far) or return FALSE if silent=TRUE.

    *	JDBC errors are reported such that the statement is shown at
	the end. Previously the statement preceded the JDBC error, so
	long statements caused errors to be truncated (#32). This also
	opens up the possibility of more structured error objects.

    *	n, block and use.label are now passed through from
        dbGetQuery() to fetch() (#44)

